--- a/index.html
+++ b/index.html
@@ -4,34 +4,34 @@
     <title>Курс по фронтэнду 1.5</title>
   </head>
   <body>
-    <aside>
-      <nav>
-        <a href="#me">Кто я такой</a>
-      </nav>
-    </aside>
+    <nav>
+      <a href="#whoami">Кто я такой</a>
+    </nav>
     <header>
       <h1>Курс по фронтэнду.<br>Версия 1.5</h1>
       <p>Премиальный. Бутиковый. Практический.</p>
     </header>
     <main>
-      <section>
-        <h2 id="me">Кто я такой</h2>
+      <section id="whoami">
+        <h2>Кто я такой</h2>
         <p>Меня зовут Евгений Родионов, и я учу людей фронтэнду.</p>
         <p>
           Я руководил разработкой Рублёвки.ру и обучил команду, которая сейчас работает
           в Тинькофф, Рокетбанке, Ростелекоме и немецком Kairion.
         </p>
         <p>
-          Я веду <a href="#telegram">канал про фронтэнд в Телеграме</a>, пишу
-          <a href="medium">статьи на Медиуме</a> и выпускаю <a href="#youtube">5-минутные видео на Ютубе.</a>
+          Я веду
+          <a href="https://t.me/rodionovrodionovrodionov">канал про фронтэнд в Телеграме</a>, пишу
+          <a href="https://medium.com/@evgeny.rodionov">статьи на Медиуме</a> и выпускаю
+          <a href="https://www.youtube.com/c/evgenyrodionov">5-минутные видео на Ютубе.</a>
         </p>
         <p>
           Хочу чтобы в России были крутые интерфейсы. Я взращиваю крутых ребят, с которыми готов
           работать сам.
         </p>
-        <p>Спроси у Жени, Ильи, Кости, Люды и Лизы.</p>
+        <aside>Спроси у Жени, Ильи, Кости, Люды и Лизы.</aside>
       </section>
-      <section>
+      <section id="changelog">
         <h2>Ченджлог к версии 1.5</h2>
         <p>
           Я провёл 4 потока и понял узкие места курса. Да, люди добивались своих целей — находили
